--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,35 @@ nav {
     /* Adjust margin to accommodate sidebar */
 }
 
+/* popup Announcement */
+#popupContainer {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+#popupContent {
+    background-color: white;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    width: 80%;
+    margin: 0 auto;
+}
+
+.close {
+    float: right;
+    font-size: 30px;
+    font-weight: bolder;
+    cursor: pointer;
+}
+
 /* Style the scroll-to-top button */
 .scroll-to-top {
     display: none;
